delete EditText alas dan tinggi

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,37 +16,6 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/edt_alas"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="numberDecimal"
-            android:hint="alas"/>
-
-        <EditText
-            android:id="@+id/edt_tinggi"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="numberDecimal"
-            android:hint="tinggi"/>
-
-        <Button
-            android:id="@+id/btn_hitung_luas"
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="20dp"
-            android:text="hitung"
-            android:layout_gravity="center"/>
-
-        <TextView
-            android:id="@+id/tv_hasil_luas"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:text="Hasil"
-            android:textSize="30sp"/>
-
-        <EditText
             android:id="@+id/edt_panjang"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -61,11 +30,28 @@
             android:hint="lebar"/>
 
         <Button
-            android:id="@+id/btn_hitung_keliling"
-            android:layout_width="100dp"
-            android:layout_height="50dp"
+            android:id="@+id/btn_hitung_luas"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="hitung"
+            android:text="Hitung Luas"
+            android:layout_gravity="center"/>
+
+        <TextView
+            android:id="@+id/tv_hasil_luas"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:text="Hasil"
+            android:textSize="30sp"/>
+
+        <Button
+            android:id="@+id/btn_hitung_keliling"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Hitung Keliling"
             android:layout_gravity="center"/>
 
         <TextView
